[package]
name = "fancyfreewalks"
version = "0.1.0"
authors = ["Christopher Obbard <chris@64studio.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
geoutils = "0.4"
kml = "0.3"
regex = "1.5"
serde = { version = "1.0", features = ["derive"] }
